# libime-libhangul

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.cmd  uninstall.cmd  vcpkg.json
data/: symbols.txt
doc/: keyboards.md  settings.md
include/: AsciiInputMode.h  AutoConversionInputMode.h  CandidateState.h  HangulIMEModule.h  HangulIMESettings.h  HangulIMETextService.h  HanjaConverter.h  HanjaFrequencyTable.h  InputContext.h  InputMode.h  ManualConversionInputMode.h  SymbolTable.h  strcvt.h
src/: AsciiInputMode.cpp  AutoConversionInputMode.cpp  CMakeLists.txt  CandidateState.cpp  DllEntry.cpp  HangulIMEModule.cpp  HangulIMESettings.cpp  HangulIMETextService.cpp  HanjaConverter.cpp  HanjaFrequencyTable.cpp  InputContext.cpp  InputMode.cpp  ManualConversionInputMode.cpp  SymbolTable.cpp  libime-libhangul.def  strcvt.cpp
